# Symulation_v1_2

Symulation_v1_2/: CMakeLists.txt  Symulation_v1_2.kdev4  main.cpp
Symulation_v1_2/SymulationLib/: CMakeLists.txt  collider.cpp  collider.h  collisionpoints.cpp  collisionpoints.h  object.cpp  object.h  planecollider.cpp  planecollider.h  spherecollider.cpp  spherecollider.h  transform.cpp  transform.h  world.cpp  world.h
